nohup.out
  File "/home/ssm-user/vl-analytics/app.py", line 54
    if request.method == 'POST'
                               ^
SyntaxError: invalid syntax
  File "/home/ssm-user/vl-analytics/app.py", line 54
    if request.method == 'POST'
                               ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/ssm-user/vl-analytics/app.py", line 4, in <module>
    import bcrypt
ModuleNotFoundError: No module named 'bcrypt'
 * Serving Flask app 'app'
 * Debug mode: off
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.31.39.203:5000
Press CTRL+C to quit
146.70.147.100 - - [06/Jun/2026 07:39:53] "GET /login HTTP/1.1" 200 -
146.70.147.100 - - [06/Jun/2026 07:39:53] "GET /favicon.ico HTTP/1.1" 404 -
146.70.147.100 - - [06/Jun/2026 07:40:02] "POST /login HTTP/1.1" 200 -
146.70.147.100 - - [06/Jun/2026 07:40:10] "POST /login HTTP/1.1" 302 -
146.70.147.100 - - [06/Jun/2026 07:40:10] "GET / HTTP/1.1" 200 -
146.70.147.100 - - [06/Jun/2026 07:40:11] "GET /api/stats HTTP/1.1" 200 -
